Changelog
~~~~~~~~~~~~~~~~~
17-4-2021: Added test item and block

18-4-2021: Removed test item and block, added the beginnings of an aluminium tool system.

8-5-2021: Finished aluminium and silicon system, but left silicon ore texture unfinished.

11-5-2021: Finished silicon ore texture, added CPU.

14-5-2021: Fixed custom ore generation; successfully ran Minecraft on a browser through replit.com.

15-5-2021: Added smelting recipes for aluminium and silicon ores; added (strangely) non-functional loot tables.

20-5-2021: Downgraded Fabric API version to 0.32.5 for functionality with Origins; added missing power core models.

21-5-2021: Added power core.