@@ -6,7 +6,7 @@
       "entries": [
         {
           "type": "minecraft:item",
-          "name": "additions:silicon_ore"
+          "name": "silicon_ore"
         }
       ],
       "conditions": [
